--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EGN Members' Universe - Unavailable</title>
+    <title>EGN Members' Universe - Status</title>
     <style>
         body {
             display: flex;
@@ -30,8 +30,8 @@
 <body>
     <img src="logo.png" alt="EGN Logo" class="logo">
     <div class="message">
-        <h1>EGN Members' Universe</h1>
-        <p>is unfortunately unavailable due to a server security update. We do not currently have an ETA for a resolution.</p>
+        <h1>EGN Members' Universe is currently unavailable.</h1>
+        <p>EGN Members' Universe is unfortunately currently unavailable due to a server security update. We do not currently have an ETA for a resolution.</p>
         <p>Contact <a href="mailto:MUsupport@egn.com">MUsupport@egn.com</a> if you have any questions.</p>
     </div>
 </body>
