--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
     <img src="logo.png" alt="EGN Logo" class="logo">
     <div class="message">
-        <h1>EGN Members' Universe is currently unavailable.</h1>
-        <p>EGN Members' Universe is unfortunately currently unavailable due to a server security update. We do not currently have an ETA for a resolution.</p>
+        <h1>EGN Members' Universe is currently running.</h1>
+        <p>Have a great day!</p>
         <p>Contact <a href="mailto:MUsupport@egn.com">MUsupport@egn.com</a> if you have any questions.</p>
     </div>
 </body>
